# NetworkMonitoringTool

./: .gitignore  .replit  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  dashboard.py  database.py  ml_analyzer.py  network_analyzer.py  notifier.py  packet_analyzer.py  pyproject.toml  replit.nix  requirements.txt  security_integrations.py  stats_collector.py  threat_detector.py  utils.py  visualizer.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
attached_assets/: Pasted--usr-bin-env-python3-Deep-Packet-Inspection-Module-for-Network-Traffic-Analyzer-This-module-pr-1740818908562.txt  Pasted--usr-bin-env-python3-Real-Time-Network-Traffic-Analyzer-using-Python-and-Scapy-This-script-cap-1740818952186.txt  Pasted-1-Denial-of-Service-DoS-Distributed-Denial-of-Service-DDoS-Attacks-Attack-Description-Ove-1740810568045.txt  Pasted-Current-Issues-to-Fix-PDF-Generation-Failing-Fix-and-ensure-detailed-structured-PDF-reports--1740820435529.txt  Pasted-Problem-Statement-Attack-simulation-and-network-simulation-are-not-working-properly-Dashboard-dat-1740814207461.txt  Pasted-Problem-Statement-Connection-Heat-Map-Attack-Patterns-are-not-displaying-data-Dashboard-layout--1740816546244.txt  Pasted-Project-Report-Real-Time-Network-Traffic-Analyzer-Using-Python-and-Scapy-1-Introduction-A-real-tim-1740810005924.txt
models/: anomaly_detector.joblib  scaler.joblib
rules/: snort-rules.json  suricata-rules.json  zeek-signatures.json
scripts/: generate_requirements.py  install_dependencies.sh  setup_project.sh  verify_structure.sh
templates/: dashboard.html
(+3 files in other folders)
