[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "scapy>=2.6.1",
    "scapy-python3>=0.26",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.38",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
]
